--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,12 @@
           <li class="nav-item active">
             <a class="nav-link" href="/students">Студенты</a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/interactions">Взаимодействия</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/mentors">Наставники</a>
+          </li>
         </ul>
       </div>
     </div>
