Сделал вход/выход; добавил кнопки создания нового объекта на страницы со списками.

--- a/templates/mentor/detail.html
+++ b/templates/mentor/detail.html
@@ -21,7 +21,14 @@
             {% else %}
                 <dt class="col-sm-9"><input class="form-check-input" type="checkbox" value="" id="MentorCheck" disabled></dt>
             {% endif %}
-          <a href="update" class="btn btn-primary">Редактировать</a>
+            {% if mentor.id == user.profile.id or user.is_superuser %}
+                <a href="update" class="btn btn-primary">Редактировать</a>
+            {% else %}
+                <a href="update" class="btn btn-primary disabled">Редактировать</a>
+            {% endif %}
+            {% if mentor.id == user.profile.id %}
+                <a href="/accounts/logout" class="btn btn-danger">Выйти</a>
+            {% endif %}
         </dl>
     </div>
 </div>
