--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,13 @@
           <li class="nav-item active">
             <a class="nav-link" href="/mentors">Наставники</a>
           </li>
+          <li class="nav-item active">
+              {% if user.is_authenticated  %}
+                <a class="nav-link" href="/mentors/{{ user.profile.id }}">Привет, {{ user.profile.name }}</a>
+              {% else %}
+                <a class="nav-link" href="/accounts/login">Вход</a>
+              {% endif %}
+          </li>
         </ul>
       </div>
     </div>
