--- a/templates/interaction/interactions.html
+++ b/templates/interaction/interactions.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block container %}
+<a href="interactions/create" class="btn btn-primary btn-lg">Создать</a>
 <table class="table">
     <tr>
         <thead class="thead-light">
