--- a/templates/student/students.html
+++ b/templates/student/students.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block container %}
 <h1>Список студентов</h1>
-
+<a href="students/create" class="btn btn-primary btn-lg">Создать</a>
 <table class="table">
   <thead>
     <tr>
