Поле описания для взаимодействия; Список закрепленных за наставником студентов в анкете; Не работала ссылка на ментора в анкете студента

--- a/templates/interaction/detail.html
+++ b/templates/interaction/detail.html
@@ -11,6 +11,8 @@
           <dd class="col-sm-9">{{ interaction.interaction_name }}</dd>
           <dt class="col-sm-3">Тип</dt>
           <dd class="col-sm-9">{{ interaction.type }}</dd>
+          <dt class="col-sm-3">Описание</dt>
+          <dd class="col-sm-9">{{ interaction.description }}</dd>
           <dt class="col-sm-3">Наставник</dt>
             <dd class="col-sm-9"><a href="/mentors/{{ interaction.mentor.id }}">{{ interaction.mentor }}</a></dd>
           <dt class="col-sm-3">ФИО студента</dt>
