--- a/templates/student/students.html
+++ b/templates/student/students.html
@@ -13,7 +13,7 @@
   <tbody>
   {% for student in students_list %}
     <tr>
-      <td><a href="{{ student.id }}">{{ student }}</a></td>
+      <td><a href="/students/{{ student.id }}">{{ student }}</a></td>
       <td>{{ student.university }}</td>
       <td>{{ student.mentor }}</td>
     </tr>
