--- a/templates/base.html
+++ b/templates/base.html
@@ -2,64 +2,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  {% block meta_tags %}{% endblock %}
-  <title>{% block title %}Студенты КС{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% block meta_tags %}{% endblock %}
+    <title>{% block title %}Студенты КС{% endblock %}</title>
 
-  {% block css %}
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  {% endblock %}
+    {% block css %}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+              crossorigin="anonymous">
+    {% endblock %}
 
-  {% block custom_css %}
-  {% endblock %}
+    {% block custom_css %}
+    {% endblock %}
 </head>
 <body>
 
-  {% block navbar %}
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">Студенты КС</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+{% block navbar %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="/">Студенты КС</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/students">Студенты</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/interactions">Взаимодействия</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/mentors">Наставники</a>
-          </li>
-          <li class="nav-item active">
-              {% if user.is_authenticated  %}
-                <a class="nav-link" href="/mentors/{{ user.profile.id }}">Привет, {{ user.profile.name }}</a>
-              {% else %}
-                <a class="nav-link" href="/accounts/login">Вход</a>
-              {% endif %}
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  {% endblock %}
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/students">Студенты</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/interactions">Взаимодействия</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/mentors">Наставники</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/tags">Теги</a>
+                    </li>
+                    <li class="nav-item active">
+                        {% if user.is_authenticated %}
+                            <a class="nav-link"
+                               href="/mentors/{{ user.profile.id }}">Привет, {{ user.profile.name }}</a>
+                        {% else %}
+                            <a class="nav-link" href="/accounts/login">Вход</a>
+                        {% endif %}
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+{% endblock %}
 
-  <div class="container mt-4">
-  {% block container %}
-  {% endblock %}
-  </div>
+<div class="container mt-4">
+    {% block container %}
+    {% endblock %}
+</div>
 
-  {% block js %}
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  {% endblock %}
+{% block js %}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+{% endblock %}
 
-  {% block custom_js %}
-  {% endblock %}
+{% block custom_js %}
+{% endblock %}
 </body>
 </html>
