--- a/templates/mentor/detail.html
+++ b/templates/mentor/detail.html
@@ -23,9 +23,11 @@
             {% endif %}
             <dt class="col-sm-3">Закрепленные студенты:</dt>
             {% if mentor.students.all %}
+                <dt class="col-sm-9">
                 {% for student in mentor.students.all %}
-                    <dt class="col-sm-9"><a href=/students/{{ student.id }}>{{ student }}</a></dt>
+                    <a href=/students/{{ student.id }}>{{ student }}</a>
                 {% endfor %}
+                </dt>
             {% else %}
                 <dd class="col-sm-9">Отсутствуют</dd>
             {% endif %}
