--- a/templates/tag/create.html
+++ b/templates/tag/create.html
@@ -3,7 +3,7 @@
 {% block container %}
 <div class="card">
     <div class="card-header">
-        <h5 class="card-title">Добавить нового студента</h5>
+        <h5 class="card-title">Добавить тег</h5>
     </div>
     <div class="card-body">
         <form method="post">
