--- a/templates/base.html
+++ b/templates/base.html
@@ -30,23 +30,23 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/students">Студенты</a>
+                        <a class="nav-link" href="{% url 'students-list' %}">Студенты</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/interactions">Взаимодействия</a>
+                        <a class="nav-link" href="{% url 'interactions-list' %}">Взаимодействия</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/mentors">Наставники</a>
+                        <a class="nav-link" href="{% url 'mentors-list' %}">Наставники</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/tags">Теги</a>
+                        <a class="nav-link" href="{% url 'tags-list' %}">Теги</a>
                     </li>
                     <li class="nav-item active">
                         {% if user.is_authenticated %}
                             <a class="nav-link"
-                               href="/mentors/{{ user.profile.id }}">Привет, {{ user.profile.name }}</a>
+                               href="{% url 'mentor-detail' user.profile.id %}">Привет, {{ user.profile.name }}</a>
                         {% else %}
-                            <a class="nav-link" href="/accounts/login">Вход</a>
+                            <a class="nav-link" href="{% url 'login' %}">Вход</a>
                         {% endif %}
                     </li>
                 </ul>
