--- a/templates/interaction/interactions.html
+++ b/templates/interaction/interactions.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block container %}
-<a href="interactions/create" class="btn btn-primary btn-lg">Создать</a>
+<a href="{% url 'interaction-create' %}" class="btn btn-primary btn-lg">Создать</a>
 <table class="table">
     <tr>
         <thead class="thead-light">
@@ -17,7 +17,7 @@
         <tbody>
             {% for interaction in interactions %}
             <tr>
-                <td><a href="interactions/{{ interaction.id }}">{{ interaction.interaction_name }}</a></td>
+                <td><a href="{% url 'interaction-detail' interaction.id %}">{{ interaction.interaction_name }}</a></td>
                 <td>{{interaction.mentor}}</td>
                 <td>{{interaction.student}}</td>
                 <td>{{interaction.start_date}}</td>
