--- a/templates/mentor/detail.html
+++ b/templates/mentor/detail.html
@@ -25,19 +25,19 @@
             {% if mentor.students.all %}
                 <dt class="col-sm-9">
                 {% for student in mentor.students.all %}
-                    <a href=/students/{{ student.id }}>{{ student }}</a>
+                    <a href={% url 'student-detail' student.id %}>{{ student }}</a>
                 {% endfor %}
                 </dt>
             {% else %}
                 <dd class="col-sm-9">Отсутствуют</dd>
             {% endif %}
             {% if mentor.id == user.profile.id or user.is_superuser %}
-                <a href="update" class="btn btn-primary">Редактировать</a>
+                <a href="{% url 'mentor-update' mentor.id %}" class="btn btn-primary">Редактировать</a>
             {% else %}
-                <a href="update" class="btn btn-primary disabled">Редактировать</a>
+                <a class="btn btn-primary disabled">Редактировать</a>
             {% endif %}
             {% if mentor.id == user.profile.id %}
-                <a href="/accounts/logout" class="btn btn-danger">Выйти</a>
+                <a href="{% url 'logout' %}" class="btn btn-danger">Выйти</a>
             {% endif %}
         </dl>
     </div>
