--- a/templates/student/student_delete.html
+++ b/templates/student/student_delete.html
@@ -11,7 +11,7 @@
                 Вы точно хотите удалить <strong>{{ object }}</strong> ?
             </div>
             <button type="submit" class="btn btn-danger">Удалить</button>
-            <button type="button" onclick="location.href='/students/{{ object.id }}'"
+            <button type="button" onclick="location.href='{% url 'student-detail' object.id %}"
                     class="btn btn-secondary">Отмена</button>
         </form>
     </div>
