--- a/templates/tag/detail.html
+++ b/templates/tag/detail.html
@@ -19,8 +19,8 @@
             <tbody>
                 {% for interaction in tag.interactions_by_tag.all %}
                     <tr>
-                        <td><a href="/interactions/{{ interaction.id }}">{{ interaction.interaction_name }}</a></td>
-                        <td><a href="/mentors/{{ interaction.mentor.id }}">{{ interaction.mentor }}</a></td>
+                        <td><a href="{% url 'interaction-detail' interaction.id %}">{{ interaction.interaction_name }}</a></td>
+                        <td><a href="{% url 'mentor-detail' interaction.mentor.id %}">{{ interaction.mentor }}</a></td>
                         <td>{{ interaction.start_date }}</td>
                         <td>{{ interaction.end_date }}</td>
                         <td>{{ interaction.status }}</td>
