--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -3,7 +3,8 @@
     <div class="container">
         <div class="row justify-content-center align-items-center" style="height:80vh;">
             <div class="col-auto border p-3">
-                Пароль изменён!
+                <h1>Пароль изменён!</h1>
+                <a class="nav-link" href="{% url 'students-list' %}">На главную</a>
             </div>
         </div>
     </div>
