--- a/templates/student/student_detail.html
+++ b/templates/student/student_detail.html
@@ -1,67 +1,72 @@
 {% extends "base.html" %}
 {% block container %}
 
-<div class="card">
-    <div class="card-header">
-        <h5 class="card-title">Анкета студента</h5>
-    </div>
-    <div class="card-body">
-        <dl class="row">
-          <dt class="col-sm-3">ФИО</dt>
-          <dd class="col-sm-9">{{ student }}</dd>
-          <dt class="col-sm-3">О студенте</dt>
-          <dd class="col-sm-9">{{ student.bio }}</dd>
-          <dt class="col-sm-3">Место учебы</dt>
-          <dd class="col-sm-9">{{ student.university }}</dd>
-          <dt class="col-sm-3">Год поступления</dt>
-          <dd class="col-sm-9">{{ student.admission_year }}</dd>
-          <dt class="col-sm-3">Номер телефона</dt>
-          <dd class="col-sm-9">{{ student.phone_number }}</dd>
-          <dt class="col-sm-3">E-mail</dt>
-          <dd class="col-sm-9">{{ student.email }}</dd>
-          <dt class="col-sm-3">Связь</dt>
-          <dd class="col-sm-9">{{ student.communication_other }}</dd>
-          <dt class="col-sm-3">Дата рождения</dt>
-          <dd class="col-sm-9">{{ student.birth_date }}</dd>
-          <dt class="col-sm-3">Наставник</dt>
-            {% if student.mentor %}
-            <dd class="col-sm-9"><a href="{% url 'mentor-detail' student.mentor.id %}">{{ student.mentor }}</a></dd>
-            {% else %}
-                <dd class="col-sm-9">Не задан</dd>
-            {% endif %}
-            {% if student.photo %}
-                <dt class="col-sm-3">Фото</dt>
+    <div class="card">
+        <div class="card-header">
+            <h5 class="card-title">Анкета студента</h5>
+        </div>
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-3">ФИО</dt>
+                <dd class="col-sm-9">{{ student }}</dd>
+                <dt class="col-sm-3">О студенте</dt>
+                <dd class="col-sm-9">{{ student.bio|default_if_none:"&#10060" }}</dd>
+                <dt class="col-sm-3">Место учебы</dt>
+                <dd class="col-sm-9">{{ student.university|default_if_none:"&#10060" }}</dd>
+                <dt class="col-sm-3">Год поступления</dt>
+                <dd class="col-sm-9">{{ student.admission_year|default_if_none:"&#10060" }}</dd>
+                <dt class="col-sm-3">Номер телефона</dt>
+                <dd class="col-sm-9">{{ student.phone_number|default_if_none:"&#10060" }}</dd>
+                <dt class="col-sm-3">E-mail</dt>
+                <dd class="col-sm-9">{{ student.email|default_if_none:"&#10060" }}</dd>
+                <dt class="col-sm-3">Связь</dt>
+                <dd class="col-sm-9">{{ student.communication_other|default_if_none:"&#10060" }}</dd>
+                <dt class="col-sm-3">Дата рождения</dt>
+                <dd class="col-sm-9">{{ student.birth_date|default_if_none:"&#10060" }}</dd>
+                <dt class="col-sm-3">Наставник</dt>
+                {% if student.mentor %}
+                    <dd class="col-sm-9"><a href="{% url 'mentor-detail' student.mentor.id %}">{{ student.mentor }}</a>
+                    </dd>
+                {% else %}
+                    <dd class="col-sm-9">Не задан</dd>
+                {% endif %}
+                {% if student.photo %}
+                    <dt class="col-sm-3">Фото</dt>
                     <dd class="col-sm-9">
                         <img src="{{ student.photo.url }}" alt="Фото не загружено" height="200">
                     </dd>
-            {% endif %}
-          <a href="{% url 'student-update' student.id %}" class="btn btn-primary">Редактировать</a>
-          <a href="{% url 'student-delete' student.id %}" class="btn btn-danger">Удалить</a>
-        </dl>
+                {% endif %}
+                <a href="{% url 'student-update' student.id %}" class="btn btn-primary">Редактировать</a>
+                <a href="{% url 'student-delete' student.id %}" class="btn btn-danger">Удалить</a>
+            </dl>
+        </div>
     </div>
-</div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Название</th>
-      <th scope="col">Наставник</th>
-      <th scope="col">Дата начала</th>
-      <th scope="col">Дата окончания</th>
-      <th scope="col">Статус</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for interaction in student.interactions_to_student.all %}
-    <tr>
-      <td><a href="/interactions/{{ interaction.id }}">{{ interaction.interaction_name }}</a></td>
-        <td><a href="/mentors/{{ interaction.mentor.id }}">{{ interaction.mentor }}</a></td>
-      <td>{{ interaction.start_date }}</td>
-      <td>{{ interaction.end_date }}</td>
-      <td>{{ interaction.status }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Название</th>
+            <th scope="col">Наставник</th>
+            <th scope="col">Дата начала</th>
+            <th scope="col">Дата окончания</th>
+            <th scope="col">Статус</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for interaction in student.interactions_to_student.all %}
+            <tr>
+                <td><a href="{% url 'interaction-detail' interaction.id %}">{{ interaction.interaction_name }}</a></td>
+                {% if interaction.mentor %}
+                    <td><a href="{% url 'mentor-detail' interaction.mentor.id %}">{{ interaction.mentor }}</a></td>
+                {% else %}
+                    <td>&#10060</td>
+                {% endif %}
+                <td>{{ interaction.start_date|default_if_none:"&#10060" }}</td>
+                <td>{{ interaction.end_date|default_if_none:"&#10060" }}</td>
+                <td>{{ interaction.status|default_if_none:"&#10060" }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
 {% endblock %}
