--- a/templates/interaction/detail.html
+++ b/templates/interaction/detail.html
@@ -10,9 +10,9 @@
           <dt class="col-sm-3">Название</dt>
           <dd class="col-sm-9">{{ interaction.interaction_name }}</dd>
           <dt class="col-sm-3">Тип</dt>
-          <dd class="col-sm-9">{{ interaction.type }}</dd>
+          <dd class="col-sm-9">{{ interaction.type|default_if_none:"&#10060" }}</dd>
           <dt class="col-sm-3">Описание</dt>
-          <dd class="col-sm-9">{{ interaction.description }}</dd>
+          <dd class="col-sm-9">{{ interaction.description|default_if_none:"&#10060" }}</dd>
           <dt class="col-sm-3">Наставник</dt>
             {% if interaction.mentor %}
                 <dd class="col-sm-9"><a href="{% url 'mentor-detail' interaction.mentor.id %}">{{ interaction.mentor }}</a></dd>
@@ -26,15 +26,15 @@
                 <dd class="col-sm-9">Не задан</dd>
             {% endif %}
           <dt class="col-sm-3">Дата начала</dt>
-          <dd class="col-sm-9">{{ interaction.start_date }}</dd>
+          <dd class="col-sm-9">{{ interaction.start_date|default_if_none:"&#10060" }}</dd>
           <dt class="col-sm-3">Дата окончания</dt>
-          <dd class="col-sm-9">{{ interaction.end_date }}</dd>
+          <dd class="col-sm-9">{{ interaction.end_date|default_if_none:"&#10060" }}</dd>
           <dt class="col-sm-3">Статус</dt>
-          <dd class="col-sm-9">{{ interaction.status }}</dd>
+          <dd class="col-sm-9">{{ interaction.status|default_if_none:"&#10060" }}</dd>
           <dt class="col-sm-3">Дата создания</dt>
-          <dd class="col-sm-9">{{ interaction.time_create }}</dd>
+          <dd class="col-sm-9">{{ interaction.time_create|default_if_none:"&#10060" }}</dd>
           <dt class="col-sm-3">Дата последнего изменения</dt>
-          <dd class="col-sm-9">{{ interaction.time_edit }}</dd>
+          <dd class="col-sm-9">{{ interaction.time_edit|default_if_none:"&#10060" }}</dd>
             <dt class="col-sm-3">Теги</dt>
             <dd class="col-sm-9">
             {% for tag in interaction.tags.all %}
