--- a/templates/student/students.html
+++ b/templates/student/students.html
@@ -14,8 +14,8 @@
   {% for student in students_list %}
     <tr>
       <td><a href="{% url 'student-detail' student.id %}">{{ student }}</a></td>
-      <td>{{ student.university }}</td>
-      <td>{{ student.mentor }}</td>
+      <td>{{ student.university|default_if_none:"&#10060" }}</td>
+      <td>{{ student.mentor|default_if_none:"&#10060" }}</td>
     </tr>
     {% endfor %}
   </tbody>
