--- a/templates/interaction/create.html
+++ b/templates/interaction/create.html
@@ -6,7 +6,7 @@
         <h5 class="card-title">Добавить новое взаимодействие</h5>
     </div>
     <div class="card-body">
-        <form method="post">
+        <form method="post" enctype = "multipart/form-data">
             {% csrf_token %}
             {{form.as_p}}
             <button type="submit" class="btn btn-success">Создать</button>
