--- a/templates/interaction/update.html
+++ b/templates/interaction/update.html
@@ -7,7 +7,7 @@
         <h5 class="card-title">Редактирование взаимодействия</h5>
     </div>
     <div class="card-body">
-        <form method="post">
+        <form method="post" enctype = "multipart/form-data">
             {% csrf_token %}
             {{form.as_p}}
             <button type="submit" class="btn btn-success">Изменить</button>
