--- a/templates/mentor/detail.html
+++ b/templates/mentor/detail.html
@@ -72,5 +72,6 @@
         {% endfor %}
         </tbody>
     </table>
+    <a href="{% url 'interaction-create' %}?mentor={{ mentor.id }}" class="btn btn-primary btn-lg">Добавить взаимодействие</a>
 
 {% endblock %}
