--- a/templates/student/student_detail.html
+++ b/templates/student/student_detail.html
@@ -68,5 +68,6 @@
         {% endfor %}
         </tbody>
     </table>
+    <a href="{% url 'interaction-create' %}?student={{ student.id }}" class="btn btn-primary btn-lg">Добавить взаимодействие</a>
 
 {% endblock %}
