Косметические изменения в таблицах

--- a/templates/interaction/interactions.html
+++ b/templates/interaction/interactions.html
@@ -2,7 +2,7 @@
 
 {% block container %}
 <a href="{% url 'interaction-create' %}" class="btn btn-primary btn-lg">Создать</a>
-<table class="table">
+<table class="table table-hover">
     <tr>
         <thead class="thead-light">
             <tr>
