--- a/templates/student/students.html
+++ b/templates/student/students.html
@@ -2,7 +2,7 @@
 {% block container %}
 <h1>Список студентов</h1>
 <a href="{% url 'student-create' %}" class="btn btn-primary btn-lg">Создать</a>
-<table class="table">
+<table class="table table-hover">
   <thead>
     <tr>
       <th scope="col">ФИО</th>
