--- a/templates/tag/detail.html
+++ b/templates/tag/detail.html
@@ -6,7 +6,8 @@
         <h5 class="card-title">{{ tag}}</h5>
     </div>
     <div class="card-body">
-        <table class="table">
+        <table class="table table-hover table-sm">
+            <caption>Взаимодействия</caption>
             <thead>
             <tr>
                 <th scope="col">Название</th>
