--- a/templates/mentor/mentors.html
+++ b/templates/mentor/mentors.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block container %}
-<table class="table">
+<table class="table table-hover">
     <tr>
         <thead class="thead-light">
             <tr>
