--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -16,7 +16,7 @@
 
 <form method="post" action="{% url 'login' %}">
 {% csrf_token %}
-<table>
+<table class="table table-hover">
 
 <tr>
   <td>{{ form.username.label_tag }}</td>
