--- a/templates/student/student_detail.html
+++ b/templates/student/student_detail.html
@@ -42,7 +42,8 @@
         </div>
     </div>
 
-    <table class="table">
+    <table class="table table-hover table-sm">
+        <caption>Взаимодействия</caption>
         <thead>
         <tr>
             <th scope="col">Название</th>
