Заголовки на страницах списков

--- a/templates/interaction/interactions.html
+++ b/templates/interaction/interactions.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block container %}
-<a href="{% url 'interaction-create' %}" class="btn btn-primary btn-lg">Создать</a>
+<h1>Взаимодействия <a href="{% url 'interaction-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
 <table class="table table-hover">
     <tr>
         <thead class="thead-light">
