--- a/templates/mentor/mentors.html
+++ b/templates/mentor/mentors.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block container %}
+<h1>Наставники</h1>
 <table class="table table-hover">
     <tr>
         <thead class="thead-light">
