--- a/templates/student/students.html
+++ b/templates/student/students.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block container %}
-<h1>Список студентов</h1>
-<a href="{% url 'student-create' %}" class="btn btn-primary btn-lg">Создать</a>
+<h1>Студенты <a href="{% url 'student-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
+
 <table class="table table-hover">
   <thead>
     <tr>
