--- a/templates/tag/list.html
+++ b/templates/tag/list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block container %}
-    <a href="{% url 'tag-create' %}" class="btn btn-primary btn-lg">Создать</a>
+<h1>Теги <a href="{% url 'tag-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
     <table class="table table-hover">
         <tr>
             <thead class="thead-light">
