Виджеты Select2 для выбора студента и наставника во взаимодействии; наставника у студента

--- a/templates/interaction/create.html
+++ b/templates/interaction/create.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block custom_css %}
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+{% endblock %}
+
 {% block container %}
 <div class="card">
     <div class="card-header">
@@ -13,4 +17,15 @@
         </form>
     </div>
 </div>
+{% endblock %}
+
+{% block custom_js %}
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#id_mentor').select2();
+            $('#id_student').select2();
+            $('#id_tags').select2();
+        });
+    </script>
 {% endblock %}
