--- a/templates/interaction/interactions.html
+++ b/templates/interaction/interactions.html
@@ -1,34 +1,7 @@
 {% extends "base.html" %}
 
 {% block container %}
-<h1>Взаимодействия <a href="{% url 'interaction-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
-<table class="table table-hover">
-    <tr>
-        <thead class="thead-light">
-            <tr>
-                <th scope="col">Название</th>
-                <th scope="col">Наставник</th>
-                <th scope="col">Студент</th>
-                <th scope="col">Дата начала</th>
-                <th scope="col">Дата окончания</th>
-                <th scope="col">Статус</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for interaction in interactions %}
-            <tr>
-                <td><a href="{% url 'interaction-detail' interaction.id %}">{{ interaction.interaction_name }}</a></td>
-                <td>{{interaction.mentor|default_if_none:"&#10060"}}</td>
-                <td>{{interaction.student|default_if_none:"&#10060"}}</td>
-                <td>{{interaction.start_date|default_if_none:"&#10060"}}</td>
-                <td>{{interaction.end_date|default_if_none:"&#10060"}}</td>
-                <td>{{interaction.status|default_if_none:"&#10060"}}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-</table>
-{% if is_paginated %}
-    {% include "_pagination.html" %}
-{% endif %}
-
+    {% load render_table from django_tables2 %}
+    <h1>Взаимодействия <a href="{% url 'interaction-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
+    {% render_table table %}
 {% endblock %}
