--- a/templates/mentor/mentors.html
+++ b/templates/mentor/mentors.html
@@ -1,32 +1,7 @@
 {% extends "base.html" %}
 
 {% block container %}
-<h1>Наставники</h1>
-<table class="table table-hover">
-    <tr>
-        <thead class="thead-light">
-            <tr>
-                <th scope="col">ФИО</th>
-                <th scope="col">Должность</th>
-                <th scope="col">Наставник</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for mentor in mentors %}
-            <tr>
-                <td><a href="{% url 'mentor-detail' mentor.id %}">{{ mentor.surname }} {{ mentor.name }} {{ mentor.patronymic|default_if_none:"" }}</a></td>
-                <td>{{mentor.position|default_if_none:"&#10060"}}</td>
-                {% if mentor.mentor %}
-                    <td>&#9989</td>
-                {% else %}
-                    <td>&#10060</td>
-                {% endif %}
-            </tr>
-            {% endfor %}
-        </tbody>
-</table>
-{% if is_paginated %}
-    {% include "_pagination.html" %}
-{% endif %}
-
+    {% load render_table from django_tables2 %}
+    <h1>Наставники</h1>
+    {% render_table table %}
 {% endblock %}
