--- a/templates/tag/list.html
+++ b/templates/tag/list.html
@@ -1,26 +1,7 @@
 {% extends "base.html" %}
 
 {% block container %}
-<h1>Теги <a href="{% url 'tag-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
-    <table class="table table-hover">
-        <tr>
-            <thead class="thead-light">
-                <tr>
-                    <th scope="col">Название</th>
-                    <th scope="col">Количество взаимодействий</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for tag in tags %}
-                <tr>
-                    <td><a href="{% url 'tag-detail' tag.id %}">{{ tag }}</a></td>
-                    <td>{{ tag.get_count }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-    </table>
-    {% if is_paginated %}
-        {% include "_pagination.html" %}
-    {% endif %}
-
+    {% load render_table from django_tables2 %}
+    <h1>Теги <a href="{% url 'tag-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
+    {% render_table table %}
 {% endblock %}
